# python-sdk

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
callchimp/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
docs/: CallListResponse.md  CallReportRequest.md  CallReportResponse.md  CallReportResponseAnsweredCalls.md  CallReportResponseStatsInner.md  CallRequestByLeadId.md  CallRequestByVendorLeadCode.md  CallResponse.md  CallsApi.md  CallsPostRequest.md  CampaignAddSuperRequest.md  CampaignAddSuperResponse.md  CampaignFindRequest.md  CampaignListResponse.md  CampaignListsRequest.md  CampaignRemoveSuperRequest.md  CampaignRemoveSuperResponse.md  CampaignRequest.md  CampaignResponse.md  CampaignUpdateRequest.md  CampaignUploadAudioResponse.md  CampaignsApi.md  InboundCallListResponse.md  InboundCallResponse.md  InboundCallResponseCallchimpNumber.md  InboundCallResponseHangupCause.md  InboundCallResponseSupervisor.md  ListFindRequest.md  ListsApi.md  ListsListResponse.md  ListsRequest.md  ListsResponse.md  Model4XXResponse.md  Model4XXResponseErrorsInner.md  PhoneNumberListResponse.md  PhoneNumberResponse.md  PhoneNumbersApi.md  PostDevCallsRequest.md  ScriptListResponse.md  ScriptRequest.md  (+24 more)
test/: test_call_list_response.py  test_call_report_request.py  test_call_report_response.py  test_call_report_response_answered_calls.py  test_call_report_response_stats_inner.py  test_call_request_by_lead_id.py  test_call_request_by_vendor_lead_code.py  test_call_response.py  (+56 more)
(+67 files in other folders)
